# SlicerIGSIO

./: CMakeLists.txt
MetafileImporter/: CMakeLists.txt
MetafileImporter/Logic/: CMakeLists.txt
SequenceIO/: CMakeLists.txt
SequenceIO/Logic/: CMakeLists.txt
SequenceIO/MRML/: CMakeLists.txt
SlicerIGSIOCommon/: CMakeLists.txt
VideoUtil/: CMakeLists.txt
VideoUtil/Logic/: CMakeLists.txt
